# oracle_oci_demo

./: CMakeLists.txt  README.md  main.cpp  main.cpp.bak  main_c.cpp
ocis/instantclient_10_2/: run.bat  tnsnames.ora
ocis/instantclient_10_2/network/admin/: tnsnames.ora
ocis/instantclient_10_2/sdk/lib/msvc/: oci.lib  ociw32.lib  oraocci10.lib
ocis/instantclient_23_4/: BASIC_README  SDK_README  SQLPLUS_README  orasql.sym  sqlplus.sym  uidrvci.sym
ocis/instantclient_23_4/sdk/demo/: cdemo81.c  make.bat  occidemo.sql  occidemod.sql  occidml.cpp  occiobj.cpp
ocis/instantclient_23_4/sdk/include/: occiControl.h
ocis/instantclient_23_4/sdk/lib/bc/: oci.lib
ocis/instantclient_23_4/sdk/lib/msvc/: ociw32.lib
